samples/_failures_safe/1761070942_12552f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f211e1a5.c: In function ‘display_analysis’:
./samples/SAFE/__tmp_f211e1a5.c:135:12: error: missing terminating " character
  135 |     printf("Most frequent level: %s
      |            ^~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_f211e1a5.c:135:5: error: expected expression at end of input
  135 |     printf("Most frequent level: %s
      |     ^~~~~~
./samples/SAFE/__tmp_f211e1a5.c:135:5: error: expected declaration or statement at end of input
